--- a/demo.html
+++ b/demo.html
@@ -1,12 +1,7 @@
 <!doctype html>
 <meta charset="utf-8">
+<link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="demo.css">
-<link rel="stylesheet" href="icon.css">
-<link rel="stylesheet" href="themeDark.css">
-<link rel="stylesheet" href="themeLight.css">
-<link rel="stylesheet" href="toolbar.css">
-<link rel="stylesheet" href="toolbarTitle.css">
-<link rel="stylesheet" href="wnd.css">
 
 <div class="elkit-demo elkit-theme--light">
   <div class="elkit-wnd">
