--- a/demo.html
+++ b/demo.html
@@ -42,5 +42,53 @@
         </svg>
       </button>
     </div>
+
+    <div class="elkit-wndBody">
+      <div class="elkit-paneGroup">
+        <div class="elkit-sidebar">
+          <div class="elkit-navGroup">
+            <div class="elkit-navGroup-title">
+              Personal
+            </div>
+
+            <div class="
+              elkit-navGroup-item
+              elkit-navGroup-item--active
+            ">
+              <img
+                class="elkit-navGroup-itemIcon"
+                src="https://rawgit.com/elementary/icons/master/places/16/user-home.svg"
+              >
+
+              Home
+            </div>
+
+            <div class="elkit-navGroup-item">
+              <img
+                class="elkit-navGroup-itemIcon"
+                src="https://rawgit.com/elementary/icons/master/places/16/folder-download.svg"
+              >
+
+              Downloads
+            </div>
+          </div>
+
+          <div class="elkit-navGroup">
+            <div class="elkit-navGroup-title">
+              Devices
+            </div>
+
+            <div class="elkit-navGroup-item">
+              <img
+                class="elkit-navGroup-itemIcon"
+                src="https://rawgit.com/elementary/icons/master/devices/16/drive-harddisk.svg"
+              >
+
+              File system
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
