--- a/demo.html
+++ b/demo.html
@@ -77,6 +77,31 @@
             </div>
           </div>
         </div>
+
+        <div class="elkit-pane">
+          <div class="elkit-tabs">
+            <div class="elkit-tabs-tabList">
+              <div class="
+                elkit-tabs-tab
+                elkit-tabs-tab--active
+              ">
+                <button
+                  class="elkit-tabs-closeTabBtn"
+                >
+                  <i class="fa fa-times"></i>
+                </button>
+
+                <div class="elkit-tabs-tabName">
+                  Home
+                </div>
+              </div>
+            </div>
+
+            <button class="elkit-tabs-newTabBtn">
+              <i class="fa fa-plus"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
