--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
               <div class="elk-sidebar-navGroupItem elk-mActive">
                 <img
                   class="elk-sidebar-navGroupItemIcon"
-                  src="https://rawgit.com/elementary/icons/master/places/16/user-home.svg"
+                  src="icons/places/16/user-home.svg"
                 >
 
                 Home
@@ -419,7 +419,7 @@
               <div class="elk-sidebar-navGroupItem">
                 <img
                   class="elk-sidebar-navGroupItemIcon"
-                  src="https://rawgit.com/elementary/icons/master/places/16/folder-download.svg"
+                  src="icons/places/16/folder-download.svg"
                 >
 
                 Downloads
