--- a/index.html
+++ b/index.html
@@ -370,10 +370,8 @@
         The toolbar component can be used to create
         standard window header toolbars as well as others
         kinds of toolbars.
-      </p>
 
-      <p>
-        The sidebar component can also be used in other
+        <br>The sidebar component can also be used in other
         places, but is typically used inside windows.
       </p>
     </div>
