--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     border-radius: 5px;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
+    overflow: hidden;
     box-shadow: 0 0 30px rgba(0, 0, 0, .1);
   }
 
