--- a/index.html
+++ b/index.html
@@ -371,8 +371,10 @@
         The toolbar component can be used to create
         standard window header toolbars as well as others
         kinds of toolbars.
+      </p>
 
-        <br>The sidebar component can also be used in other
+      <p>
+        The sidebar component can also be used in other
         places, but is typically used inside windows.
       </p>
     </div>
