--- a/index.html
+++ b/index.html
@@ -390,11 +390,32 @@
 
           <div class="elk-tlb-centerBox">
             <div class="elk-tlb-wndTitle">
-              Files
+              Photos
             </div>
           </div>
 
           <div class="elk-tlb-rightBox">
+            <button class="elk-tlbIconBtn">
+              <img
+                class="elk-sidebar-navGroupItemIcon"
+                src="icons/actions/24/edit-undo.svg"
+              >
+            </button>
+
+            <button class="elk-tlbIconBtn">
+              <img
+                class="elk-sidebar-navGroupItemIcon"
+                src="icons/actions/24/edit-redo.svg"
+              >
+            </button>
+
+            <button class="elk-tlbIconBtn">
+              <img
+                class="elk-sidebar-navGroupItemIcon"
+                src="icons/actions/24/open-menu.svg"
+              >
+            </button>
+
             <button class="elk-tlbIconBtn elk-mStdBtn">
               <i class="fa fa-expand"></i>
             </button>
