--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
   }
 
   .docItem {
-    padding: 48px 0;
+    margin: 80px 0;
     color: #333;
+  }
+
+  .docItem:first-child {
+    margin-top: 48px;
   }
 
   .docItem-heading {
@@ -89,6 +93,7 @@
   }
 
   .docItem-example {
+    margin-bottom: 40px;
     font-family: 'Open Sans', sans-serif;
     box-shadow: 0 0 30px rgba(0, 0, 0, .1);
   }
@@ -347,10 +352,13 @@
     align-items: center;
     width: 144px;
     border-left: 1px solid #afafaf;
-    padding-right: 23px;
     padding-top: 1px;
     font-size: 12px;
     color: #333;
+  }
+
+  .elk-tabs.elk-mWithCloseBtns .elk-tabs-tab {
+    padding-right: 23px;
   }
 
   .elk-tabs-tab.elk-mActive {
@@ -368,15 +376,31 @@
     border-left: 0;
   }
 
-  .elk-tabs-closeTabBtn {
-    position: relative;
-    top: -1px;
+  .elk-tabs-tab:not(.elk-mActive):last-child {
+    border-right: 1px solid #afafaf;
+  }
+
+  .elk-tabs-closeTabBtn,
+  .elk-tabs-newTabBtn {
     display: inline-flex;
     border: 0;
     padding: 1px 10px 0;
     font-size: 10px;
-    color: #5c5c5c;
     background-color: transparent;
+  }
+
+  .elk-tabs-closeTabBtn {
+    position: relative;
+    top: -1px;
+    color: #5c5c5c;
+  }
+
+  .elk-tabs:not(.elk-mWithCloseBtns) .elk-tabs-closeTabBtn {
+    display: none;
+  }
+
+  .elk-tabs-newTabBtn {
+    color: #686868;
   }
 
   .elk-tabs-tabName {
@@ -542,6 +566,7 @@
         </div>
       </div>
     </div>
+  </div>
 
   <div class="docItem">
     <div class="docItem-heading">
@@ -553,11 +578,61 @@
         The tabs component can be used e.g. to create
         tabbed window panes.
       </p>
+
+      <p>
+        No close buttons, no new tab button:
+      </p>
     </div>
 
     <div class="docItem-example docItem-example--wnd">
       <div class="elk-wnd">
         <div class="elk-tabs">
+          <div class="elk-tabs-tabList">
+            <div class="elk-tabs-tab elk-mActive">
+              <button class="elk-tabs-closeTabBtn">
+                <i class="fa fa-times"></i>
+              </button>
+
+              <div class="elk-tabs-tabName">
+                General
+              </div>
+            </div>
+
+            <div class="elk-tabs-tab">
+              <button class="elk-tabs-closeTabBtn">
+                <i class="fa fa-times"></i>
+              </button>
+
+              <div class="elk-tabs-tabName">
+                Behavior
+              </div>
+            </div>
+
+            <div class="elk-tabs-tab">
+              <button class="elk-tabs-closeTabBtn">
+                <i class="fa fa-times"></i>
+              </button>
+
+              <div class="elk-tabs-tabName">
+                Colors
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="elk-pane elk-mPlaceholder"></div>
+      </div>
+    </div>
+
+    <div class="docItem-details">
+      <p>
+        With close buttons, with new tab button:
+      </p>
+    </div>
+
+    <div class="docItem-example docItem-example--wnd">
+      <div class="elk-wnd">
+        <div class="elk-tabs elk-mWithCloseBtns">
           <div class="elk-tabs-tabList">
             <div class="elk-tabs-tab">
               <button class="elk-tabs-closeTabBtn">
@@ -565,7 +640,17 @@
               </button>
 
               <div class="elk-tabs-tabName">
-                /
+                Home
+              </div>
+            </div>
+
+            <div class="elk-tabs-tab">
+              <button class="elk-tabs-closeTabBtn">
+                <i class="fa fa-times"></i>
+              </button>
+
+              <div class="elk-tabs-tabName">
+                Downloads
               </div>
             </div>
 
@@ -575,10 +660,24 @@
               </button>
 
               <div class="elk-tabs-tabName">
-                Home
+                Photos
+              </div>
+            </div>
+
+            <div class="elk-tabs-tab">
+              <button class="elk-tabs-closeTabBtn">
+                <i class="fa fa-times"></i>
+              </button>
+
+              <div class="elk-tabs-tabName">
+                Other
               </div>
             </div>
           </div>
+
+          <button class="elk-tabs-newTabBtn">
+            <i class="fa fa-plus"></i>
+          </button>
         </div>
 
         <div class="elk-pane elk-mPlaceholder"></div>
