--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     font-weight: 300;
   }
 
-  a:link {
+  a:link, a:visited {
     text-decoration: none;
+    color: #4b92c6;
   }
 
   .generalContainer {
@@ -408,6 +409,15 @@
     flex-grow: 1;
     justify-content: center;
   }
+
+  .pageFtr {
+    padding: 20px;
+    background-color: #c5ccd41a;
+    font-size: 13px;
+    text-align: center;
+    box-shadow: 0 -10px 10px #c5ccd41a;
+    color: #555;
+  }
 </style>
 
 <div class="pageHdr">
@@ -683,5 +693,25 @@
         <div class="elk-pane elk-mPlaceholder"></div>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="pageFtr">
+  <div class="generalContainer">
+    <p>
+      Element Kit was lovingly built by
+      <a href="https://github.com/vessel-software">Vessel Software</a>.
+      <br>Its source code is licensed under the
+      <a href="https://www.gnu.org/licenses/agpl-3.0.html">AGPL-3.0+</a>
+      license and its docs are licensed under the
+      <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en_US">CC BY-SA 4.0</a>.
+    </p>
+
+    <p>
+      Currently v0.0.0
+      · <a href="https://github.com/vessel-software/elementkit">Source code</a>
+      · <a href="https://github.com/vessel-software/elementkit/issues">Issues</a>
+      · <a href="https://github.com/vessel-software/elementkit/releases">Releases</a>
+    </p>
   </div>
 </div>
