--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>Element Kit</title>
+<title>CSS Components &mdash; Element Kit</title>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
@@ -428,7 +428,10 @@
       </div>
 
       <div class="pageHdr-navBarLinks">
-        <a href="https://github.com/vessel-software/elementkit">View source</a>
+        <a
+          href="https://github.com/vessel-software/elementkit"
+          target="sourceCode"
+        >View source</a>
       </div>
     </div>
 
@@ -700,18 +703,43 @@
   <div class="generalContainer">
     <p>
       Element Kit was lovingly built by
-      <a href="https://github.com/vessel-software">Vessel Software</a>.
+      <a
+        href="https://github.com/vessel-software"
+        target="vesselSite"
+      >Vessel Software</a>.
+
       <br>Its source code is licensed under the
-      <a href="https://www.gnu.org/licenses/agpl-3.0.html">AGPL-3.0+</a>
+
+      <a
+        href="https://www.gnu.org/licenses/agpl-3.0.html"
+        target="softwareLicense"
+      >AGPL-3.0+</a>
+
       license and its docs are licensed under the
-      <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en_US">CC BY-SA 4.0</a>.
+
+      <a
+        href="https://creativecommons.org/licenses/by-sa/4.0/deed.en_US"
+        target="docsLicense"
+      >CC BY-SA 4.0</a>.
     </p>
 
     <p>
       Currently v0.0.0
-      · <a href="https://github.com/vessel-software/elementkit">Source code</a>
-      · <a href="https://github.com/vessel-software/elementkit/issues">Issues</a>
-      · <a href="https://github.com/vessel-software/elementkit/releases">Releases</a>
+
+      · <a
+        href="https://github.com/vessel-software/elementkit"
+        target="sourceCode"
+      >View source</a>
+
+      · <a
+        href="https://github.com/vessel-software/elementkit/issues"
+        target="issuesAndReleases"
+      >Issues</a>
+
+      · <a
+        href="https://github.com/vessel-software/elementkit/releases"
+        target="issuesAndReleases"
+      >Releases</a>
     </p>
   </div>
 </div>
