--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
         target="softwareLicense"
       >AGPL-3.0+</a>
 
-      license and its docs are licensed under the
+      license, and its docs are licensed under the
 
       <a
         href="https://creativecommons.org/licenses/by-sa/4.0/deed.en_US"
