--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
   .elk-tlb--wndHdr {
     min-height: 34px;
     border-bottom: 1px solid #989898;
+    cursor: default;
   }
 
   .elk-tlb-leftBox,
@@ -272,14 +273,13 @@
     padding: 12px 0;
     font-size: 12px;
     background-color: #e2e2e2;
+    cursor: default;
   }
 
   .elk-sidebar-navGroupTitle {
     padding: 6px 8px;
     font-weight: bold;
     color: #707070;
-    -moz-user-select: none;
-    user-select: none;
   }
 
   .elk-sidebar-navGroupItem {
@@ -292,8 +292,6 @@
     font-size: 11.5px;
     color: #7e7c7d;
     text-shadow: 0 1px rgba(255, 255, 255, .23);
-    -moz-user-select: none;
-    user-select: none;
   }
 
   .elk-sidebar-navGroupItem + .elk-sidebar-navGroupItem {
@@ -356,6 +354,7 @@
     padding-top: 1px;
     font-size: 12px;
     color: #333;
+    cursor: default;
   }
 
   .elk-tabs.elk-mWithCloseBtns .elk-tabs-tab {
