--- a/index.html
+++ b/index.html
@@ -290,6 +290,44 @@
     color: #7a7a7a;
   }
 
+  .elk-inputPill {
+    display: flex;
+    height: 25px;
+    border: 1px solid #bebebe;
+    border-radius: 3px;
+    padding: 3px 6px;
+    font-size: 13px;
+    color: #333;
+
+    box-shadow:
+      inset 0 0 0 1px rgba(185, 198, 207, 0.2),
+      0 1px 0 0 rgba(255, 255, 255, 0.3);
+
+    background-image: linear-gradient(
+      to bottom, #f0f0f0, #f5f5f5
+    );
+  }
+
+  .elk-inputPill.elk-mTlbLayout {
+    max-width: 156px;
+  }
+
+  .elk-inputPillIcon {
+    flex-shrink: 0;
+    align-self: center;
+    margin-right: 4px;
+  }
+
+  .elk-inputPill > input {
+    flex: 1;
+    align-self: stretch;
+    min-width: 0;
+    border: 0;
+    font-size: inherit;
+    color: inherit;
+    background-color: transparent;
+  }
+
   .elk-paneGroup {
     display: flex;
   }
@@ -558,6 +596,19 @@
           </div>
 
           <div class="elk-tlb-rightBox">
+            <label class="
+              elk-inputPill elk-mTlbLayout
+              elk-mTlbGroupItem
+            ">
+              <img
+                class="elk-inputPillIcon"
+                style="opacity: 0.7"
+                src="icons/actions/16/edit-find.svg"
+              >
+
+              <input placeholder="Search photos">
+            </label>
+
             <div class="elk-mTlbGroup">
               <button class="
                 elk-tlbIconBtn
