--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   .elk-mTlbGroup + .elk-mTlbGroup,
   .elk-mTlbGroup + .elk-mTlbGroupItem,
   .elk-mTlbGroupItem + .elk-mTlbGroup {
-    margin-left: 10px;
+    margin-left: 13px;
   }
 
   .elk-mTlbGroupItem + .elk-mTlbGroupItem {
@@ -443,7 +443,8 @@
     )
   }
 
-  .elk-tabs-tab:first-child {
+  .elk-tabs-tab:first-child,
+  .elk-tabs-tab.elk-mActive + .elk-tabs-tab {
     border-left: 0;
   }
 
