--- a/index.html
+++ b/index.html
@@ -316,6 +316,9 @@
     flex-shrink: 0;
     align-self: center;
     margin-right: 4px;
+    pointer-events: none;
+    user-select: none;
+    -moz-user-select: none;
   }
 
   .elk-inputPill > input {
