--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     color: #7a7a7a;
   }
 
-  .elk-inputPill {
+  .elk-inputBox {
     display: flex;
     height: 25px;
     border: 1px solid #bebebe;
@@ -308,11 +308,11 @@
     );
   }
 
-  .elk-inputPill.elk-mTlbLayout {
+  .elk-inputBox.elk-mTlbLayout {
     max-width: 156px;
   }
 
-  .elk-inputPillIcon {
+  .elk-inputBoxIcon {
     flex-shrink: 0;
     align-self: center;
     margin-right: 4px;
@@ -321,7 +321,7 @@
     -moz-user-select: none;
   }
 
-  .elk-inputPill > input {
+  .elk-inputBox > input {
     flex: 1;
     align-self: stretch;
     min-width: 0;
@@ -601,11 +601,11 @@
 
           <div class="elk-tlb-rightBox">
             <label class="
-              elk-inputPill elk-mTlbLayout
+              elk-inputBox elk-mTlbLayout
               elk-mTlbGroupItem
             ">
               <img
-                class="elk-inputPillIcon"
+                class="elk-inputBoxIcon"
                 style="opacity: 0.7"
                 src="icons/actions/16/edit-find.svg"
               >
