--- a/index.html
+++ b/index.html
@@ -378,6 +378,8 @@
 
   .elk-sidebar-navGroupItemIcon {
     margin-right: 6px;
+    user-select: none;
+    -moz-user-select: none;
   }
 
   .elk-vPane {
